# neusym

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE
.config/: rail.toml
.github/workflows/: ci.yml
crates/neusym-core/: Cargo.toml
crates/neusym-core/src/: error.rs  lib.rs  ports.rs  test_support.rs  types.rs
crates/neusym-jira/: Cargo.toml
crates/neusym-jira/src/: client.rs  lib.rs
crates/neusym-linear/: Cargo.toml
crates/neusym-linear/src/: client.rs  lib.rs
crates/neusym-mcp/: Cargo.toml
crates/neusym-mcp/src/: cli.rs  main.rs  tools.rs
crates/neusym-sync/: Cargo.toml
crates/neusym-sync/src/: credentials.rs  engine.rs  lib.rs  output.rs  service.rs  store.rs
docs/designs/: 2026-06-29-mcp-cli-tools-design.md
docs/plans/: 2026-06-29-mcp-cli-tools.md
