[workspace]
members = [
    "crates/neusym-core",
    "crates/neusym-linear",
    "crates/neusym-jira",
    "crates/neusym-sync",
    "crates/neusym-mcp",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Joseph O'Brien"]

[workspace.dependencies]
neusym-core = { path = "crates/neusym-core" }
neusym-linear = { path = "crates/neusym-linear" }
neusym-jira = { path = "crates/neusym-jira" }
neusym-sync = { path = "crates/neusym-sync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
crux-types = { path = "../crux/crates/crux-types" }
schemars = "0.8"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
