[package]
name = "neusym-jira"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
neusym-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
