[package]
name = "neusym-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "neusym"
path = "src/main.rs"

[dependencies]
neusym-core = { workspace = true, features = ["cli"] }
neusym-linear = { workspace = true }
neusym-jira = { workspace = true }
neusym-sync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
miette = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
