[package]
name = "neusym-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
neusym-core = { workspace = true }
neusym-linear = { workspace = true }
neusym-jira = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
